tests/snapshots/run_wpt_conformance__trtx_averagePool2d_float16_4D_tensor_options_dilations_with_options_strides.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "averagePool2d.https.any.js",
    "averagePool2d float16 4D tensor options.dilations with options.strides",
    "trtx",
    "PASS",
)
